test/libsolidity/syntaxTests/nameAndTypeResolution/053_hash_collision_in_interface.sol
contract test {
    function gsf() public { }
    function tgeo() public { }
}
// ----
// TypeError: (0-78): Function signature hash collision for tgeo()
